# ikt203rep

./: CMakeLists.txt  README.md  Test cases KMP.txt  Time_complexity_analysis.md  main.cpp
Algoritmer_3/: CMakeLists.txt  error_handling.h  functions.h  main.cpp
Assignment_5/: CMakeLists.txt  main.cpp
CarRentalGui/: CMakeLists.txt
assignment_1_new/: CMakeLists.txt  main.cpp
assignment_4/: CMakeLists.txt  main.cpp
assignment_6/: CMakeLists.txt  Documentation_Assignment_6.docx
assignment_6/delivery/: main.cpp
eksamen_qt/: CMakeLists.txt  main.cpp
untitled/: CMakeLists.txt
